Utilize record classes instead of final classes and refactor test files in exercise 2.